# spang

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  conanfile.py  conanfile.txt
.github/workflows/: conan-build.yml
conan/profiles/: apple-clang  clang  gcc  msvc
dfs/: CMakeLists.txt
dfs/include/: dfs.hpp
graph/: CMakeLists.txt
graph/include/: graph.hpp
include/spang/: dfs.hpp  extend.hpp  graph.hpp  is_min.hpp  logger.hpp  parser.hpp  preprocess.hpp  projection.hpp  report.hpp  utility.hpp
logger/: CMakeLists.txt
logger/include/: logger.hpp
main/: CMakeLists.txt  validate.cpp
main/src/: validate.cpp
parser/: CMakeLists.txt
parser/include/: parser.hpp
parser/src/: parser.cpp
preprocess/: CMakeLists.txt
preprocess/include/: preprocess.hpp
preprocess/src/: preprocess.cpp
source/: extend.cpp  is_min.cpp  mine.cpp  parser.cpp  preprocess.cpp  projection.cpp  report.cpp
source/exe/: spang.cpp  validate.cpp
test/: CMakeLists.txt
test/data/: data1.txt
test/source/: test_extend.cpp  test_is_min.cpp  test_parse.cpp  test_preprocess.cpp
